--- a/week5-fetch-api-and-project/day4-7-product-catalog-app/style.css
+++ b/week5-fetch-api-and-project/day4-7-product-catalog-app/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: rgba(255, 255, 255, 0.962);
+  color: black;
+}
+
 nav{
   display: flex;
   justify-content: space-between;
@@ -27,4 +32,104 @@ nav{
   gap:2rem;
   margin-right: 1rem;
   cursor: pointer;
+}
+
+.products-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-auto-rows: 1fr;
+  gap:0.75rem;
+  margin-top: 1rem;
+}
+
+.grid-items{
+  border:2px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  border-radius: 0.15rem;
+  border: 3px solid rgb(53, 8, 5);
+}
+
+.grid-items img{
+  display: block;
+  width: 20rem;
+  height: 20rem;
+  background-color: none;
+  margin-top: 1rem;
+}
+
+.title{
+  display: block;
+  font-weight: bolder;
+  font-size: 1.50rem;
+  text-align: center;
+  margin-top: 1rem;
+  padding: 0.5rem 0.15rem;
+}
+
+.description{
+  margin-top: 1rem;
+  font-weight: 600;
+  text-align: center;
+  padding: 0.5rem 0.15rem;
+}
+
+.price{
+  font-weight: bolder;
+  margin-top: 1rem;
+  padding: 0.5rem 0.15rem;
+}
+
+
+.button{
+  width: 100%;
+}
+.button button{
+  display: block;
+  width: 60%;
+  margin: 1rem auto;
+  padding: 0.75rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 0.15rem;
+  background-color: rgb(53, 8, 5);
+  color: white;
+  cursor: pointer;
+  transition: background-color, box-shadow, transform 0.25s;
+}
+
+.button button:hover{
+  background-color: rgb(77, 11, 6);
+  box-shadow: 5px 5px 5px rgb(184, 129, 126);
+  transform: scale(1.05);
+}
+
+
+
+@media (width<=1024px) {
+  .products-container{
+    grid-template-columns: 1fr 1fr;
+    gap:0.5rem;
+    margin-top: 0.75rem;
+  }
+}
+@media (width<=768px) {
+  .products-container{
+    grid-template-columns: 1fr 
+  }
+
+  .button{
+    width: 100%;
+  }
+  .button button{
+    width: 60%;
+    margin: 0.15rem auto;
+    padding-top: 1.15rem;
+    padding-bottom: 1.15rem;
+    font-size: 0.90rem;
+  }
 }
