Day 7: Search of products implemented

--- a/week5-fetch-api-and-project/day4-7-product-catalog-app/style.css
+++ b/week5-fetch-api-and-project/day4-7-product-catalog-app/style.css
@@ -124,6 +124,13 @@ nav{
 }
 
 
+.category-select{
+  padding: 1rem 0.5rem;
+  font-size: 1.05rem;
+  margin-left: 0.5rem;
+  border: 1px solid black;
+  border-radius: 2px;
+}
 
 
 
