--- a/Week9-amazon-project/javascript-amazon-project-main/styles/pages/checkout/checkout.css
+++ b/Week9-amazon-project/javascript-amazon-project-main/styles/pages/checkout/checkout.css
@@ -209,3 +209,14 @@
   margin-top: 11px;
   margin-bottom: 15px;
 }
+
+
+
+.is-editing-quantity .quantity-input,
+.is-editing-quantity .save-link{
+  display: initial;
+}
+
+.is-editing-quantity .update-quantity-link{
+  display: none;
+}
