--- a/Week9-amazon-project/javascript-amazon-project-main/styles/pages/orders.css
+++ b/Week9-amazon-project/javascript-amazon-project-main/styles/pages/orders.css
@@ -218,3 +218,33 @@
     padding: 12px;
   }
 }
+
+.added-to-cart {
+  color: rgb(6, 125, 98);
+  font-size: 16px;
+
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+  margin-bottom: 8px;
+
+  /* At first, the "Added to cart" message will
+     be invisible. Use JavaScript to change the
+     opacity and make it visible. */
+  opacity: 0;
+}
+
+.visible-added-to-cart{
+  opacity: 1;
+}
+
+.added-to-cart img {
+  height: 20px;
+  margin-right: 5px;
+}
+
+.add-to-cart-button {
+  width: 100%;
+  padding: 8px;
+  border-radius: 50px;
+}
